--- a/DESAFIOS/Projeto Rede Social/estilos/style.css
+++ b/DESAFIOS/Projeto Rede Social/estilos/style.css
@@ -36,3 +36,11 @@ section#telefone{
     transform:translate(-50%, -50%) ;
 }
 
+iframe#tela{
+    position: relative;
+    top:80px ;
+    left:22px;
+    width: 268px;
+    height: 471px;
+}
+
